--- a/src/index.css
+++ b/src/index.css
@@ -23,15 +23,27 @@
   margin:0 0 20px;
   display: flex;
   flex-direction: row;
-  justify-content: space-around; 
+  justify-content: space-between; 
+}
+
+@media (min-width: 768px) {
+  .nav--container {
+    justify-content: space-around; 
+  }
 }
 
 .nav--link {
   font-family: 'Roboto', sans-serif;
-  font-size:18px;
+  font-size:14px;
   font-weight: 300;
   text-decoration:none;
   color:white;
+}
+
+@media (min-width: 768px) {
+  .nav--link {
+    font-size:18px;
+  }
 }
 
 .nav--link:hover {
@@ -43,26 +55,54 @@
 }
 
 .form--container {
-  margin:0 auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+@media (min-width: 768px) {
+  .form--container {
+    text-align: center;
+    margin:0 auto;
+  }
 }
 
 .form--label {
   font-family: 'Roboto', sans-serif;
-  font-size:14px;
+  font-size:12px;
   font-weight: 300;
   color:white;
 }
 
+@media (min-width: 768px) {
+  .form--label {
+    font-size:14px;
+  }
+}
+
 .form--input {
-margin-left:14px;
+  margin:14px 0 0 0;
+}
+
+@media (min-width: 768px) {
+  .form--input {
+    margin-left:14px;
+    }
 }
 
 .section--home,
 .section--getTitle,
 .section--getVoTitle,
 .section--getOverview {
-  padding:20px;
+  margin:0 auto;
+}
 
+@media (min-width: 768px) {
+  .section--home,
+  .section--getTitle,
+  .section--getVoTitle,
+  .section--getOverview {
+    padding:20px;
+  }
 }
 
 .section--home-title, 
@@ -74,6 +114,7 @@ margin-left:14px;
   font-weight: 700;
   margin-bottom:30px;
   text-align: center;
+  color: #495C83;
 }
 
 .section--getTitle-title,
@@ -87,10 +128,20 @@ margin-left:14px;
 .section--getTitle-list,
 .section--getVoTitle-list,
 .section--getOverview-list {
- display:grid;
- grid-template-columns:repeat(2, 1fr);
- grid-gap:20px;
- justify-items: center;
+  display:grid;
+  grid-template-columns:1fr;
+  grid-gap:15px;
+}
+
+@media (min-width: 768px) {
+  .section--home-list,
+  .section--getTitle-list,
+  .section--getVoTitle-list,
+  .section--getOverview-list {
+  grid-template-columns:repeat(2, 1fr);
+  grid-gap:20px;
+  justify-items: center;
+  }
 }
 
 .section--home-list__item,
@@ -102,13 +153,26 @@ margin-left:14px;
   flex-direction: column;
   /* justify-content: space-between; */
   align-items: center;
-  padding:10px;
+  padding:5px;
   border-radius: 6px;
+  width:200px;
+  max-width: 320px;
+  margin:0 auto;
+}
+
+@media (min-width: 768px) {
+  .section--home-list__item,
+  .section--getTitle-list__item,
+  .section--getVoTitle-list__item,
+  .section--getOverview-list__item {
+    padding:10px;
+    width:auto;
+  }
 }
 
 .item--title{
   font-family: 'Roboto', sans-serif;
-  font-size:26px;
+  font-size:16px;
   font-weight: 700;
   line-height: 1;
   text-align: center;
@@ -117,20 +181,40 @@ margin-left:14px;
   color:#495C83;
 }
 
+@media (min-width: 768px) {
+  .item--title{
+    font-size:26px;
+  }
+}
+
 .item--image {
-  width: 250px;
+  width: 150px;
   height: auto;
+}
+
+@media (min-width: 768px) {
+  .item--image {
+    width: 250px;
+    height: auto;
+  }
 }
 
 .item--text{
   font-family: 'Roboto', sans-serif;
-  font-size:15px;
+  font-size:12px;
   font-weight: 300;
   line-height: 1.25;
   text-align: left;
   margin:20px 0 10px;
-  width: 250px;
+  width: 150px;
   color:#495C83;
+}
+
+@media (min-width: 768px) {
+  .item--text{
+    font-size:15px;
+    width: 250px;
+  }
 }
 
 
